--- a/Engine/Engine.fsproj
+++ b/Engine/Engine.fsproj
@@ -48,8 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Program.fs" />
     <None Include="App.config" />
+    <Compile Include="Domain.fs" />
+    <Compile Include="PlayQueue.fs" />
+    <Compile Include="Vote.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
