Small improving changes

--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,5 @@ ModelManifest.xml
 .fake/
 Spotify-Stream/Spotify-Stream/Engine/.cache-jakecoltman@sky.com
 Spotify-Stream/Spotify-Stream/Engine/keys.json
+Spotify-Stream/Spotify-Stream/API/.cache-jakecoltman@sky.com
+Spotify-Stream/Spotify-Stream/API/.cache-jakecoltman@sky.com
