Play chosen song first

--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,5 @@ Spotify-Stream/Spotify-Stream/Engine/.cache-jakecoltman@sky.com
 Spotify-Stream/Spotify-Stream/Engine/keys.json
 Spotify-Stream/Spotify-Stream/API/.cache-jakecoltman@sky.com
 Spotify-Stream/Spotify-Stream/API/.cache-jakecoltman@sky.com
+*.cache-jakecoltman
+Spotify-Stream/Spotify-Stream/API/keys.json
