--- a/Engine/packages.config
+++ b/Engine/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FSharp.Data" version="2.3.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="SpotifyAPI-NET" version="2.10.1" targetFramework="net452" />
 </packages>
